--- a/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/LineChart.axml
+++ b/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/LineChart.axml
@@ -12,4 +12,11 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:id="@+id/textView3" />
+    <Button
+        android:text="Make now!"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ButtonLineChart"
+        android:layout_gravity="center"
+        android:layout_marginTop="300px" />
 </LinearLayout>
