--- a/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/BarChart.axml
+++ b/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/BarChart.axml
@@ -11,5 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2" 
+        android:textColor="#000000"/>
+  <Button
+    android:text="Make now!"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/ButtonBarChart"
+    android:layout_gravity="center"
+    android:layout_marginTop="300px" />
 </LinearLayout>
