--- a/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/LineChart.axml
+++ b/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/LineChart.axml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:id="@+id/textView3" />
+        android:id="@+id/textView3" 
+        android:textColor="#000000"/>
+        
     <Button
         android:text="Make now!"
         android:layout_width="match_parent"
