--- a/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/PieChart.axml
+++ b/FietsTracker/FietsTracker/FietsTracker.Droid/Resources/layout/PieChart.axml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:id="@+id/textView1" />
+        android:id="@+id/textView1" 
+        android:textColor="#000000" />
     <Button
         android:text="Make now!"
         android:layout_width="match_parent"
